--- a/style.css
+++ b/style.css
@@ -475,8 +475,19 @@ form a{
     }
 }
 
+    /* ---Media query for less than 700 screen size --- */
+    @media only screen and (max-width: 700px){
+        nav ul{
+            font-size: 0.9rem;
+            margin-top: -55px;
+        }
+    }
     /* ---Media query for less than 600 screen size --- */
     @media only screen and (max-width: 600px){
+        nav ul{
+            font-size: 0.9rem;
+            margin-top: -55px;
+        }
         .row{
             text-align: center;
         }
@@ -498,6 +509,14 @@ form a{
         }
       
     }
+        /* ---Media query for less than 500 screen size --- */
+        @media only screen and (max-width: 500px){
+            nav ul{
+                font-size: 0.9rem;
+                margin-top: -55px;
+            }
+
+        }
     
     /* ---Media query for less than 390 screen size --- */
     @media only screen and (max-width: 390px){
